v2.0.1


v1.99.6
	Notes:
		- 'annotation' and "annotation<-" generics were moved to BiocGenerics 0.3.2. Now using appropriate generic function, but requiring BiocGenerics >= 0.3.2

v1.99.5
	Bugfixes:
		- Added replicates argument to csDistHeat to view distances between individual replicate samples.
		- Appropriately distinguish now between 'annotation' (external attributes) and features (gene-level sub-features).
		- csHeatmap now has 'method' argument to pass function for any dissimilarity metric you desire. You must pass a function that returns a 'dist' object applied to rows of a matrix. Default is still JS-distance.
		
v1.99.3
	New Features:
		- Added diffTable() method to return a table of differential results broken out by pairwise comparison. (more human-readable)
		- Added sigMatrix() method to CuffSet objects to draw heatmap showing number of significant genes by pairwise comparison at a given FDR.
		- A call to fpkm() now emits calculated (model-derived) standard deviation field as well.
		- Can now pass a GTF file as argument to readCufflinks() to integrate transcript model information into database backend
			* Added requirement for rtracklayer and GenomicFeatures packages.
			* You must also indicate which genome build the .gtf was created against by using the 'genome' argument to readCufflinks.
		- Integration with Gviz:
			* CuffGene objects now have a makeGeneRegionTrack() argument to create a GeneRegionTrack() from transcript model information
			* Can also make GRanges object
			* ONLY WORKS IF YOU READ .gtf FILE IN WITH readCufflinks()
		- Added csScatterMatrix() and csVolcanoMatrix() method to CuffData objects.
		- Added fpkmSCVPlot() as a CuffData method to visualize replicate-level coefficient of variation across fpkm range per condition.
		- Added PCAplot() and MDSplot() for dimensionality reduction visualizations (Principle components, and multi-dimensional scaling respectively)